# frank-os

./: .gitignore  CMakeLists.txt  README.md
api/: m-os-api.h
apps/api/: frankos-app.h
apps/compiled/: basic.inf  digger  frankamp  frankamp.inf  notepad  pshell  pshell.inf  zxspectrum
apps/source/basic/: CMakeLists.txt  frankos_main.c  frankos_platform.c
apps/source/calculator/: CMakeLists.txt  main.c  merge_rodata.ld
apps/source/dendy/: CMakeLists.txt  frankos_alloc.cpp  frankos_stubs.c  main.c  merge.ld
apps/source/dendy/core_quicknes/: abstract_file.cpp  abstract_file.h  apu_state.cpp  apu_state.h  blargg_common.h  blargg_config.h  blargg_endian.h  blargg_source.h  blip_buffer.cpp  blip_buffer.h  data_reader.cpp  data_reader.h  effects_buffer.cpp  effects_buffer.h  multi_buffer.cpp  multi_buffer.h  nes_apu.cpp  nes_apu.h  nes_buffer.cpp  nes_buffer.h  nes_cart.cpp  nes_cart.h  nes_core.cpp  nes_core.h  nes_cpu.cpp  nes_cpu.h  nes_cpu_io.h  nes_data.cpp  nes_data.h  nes_effects_buffer.cpp  nes_effects_buffer.h  nes_emu.cpp  nes_emu.h  nes_file.cpp  nes_file.h  nes_fme7_apu.cpp  nes_fme7_apu.h  nes_mapper.cpp  nes_mapper.h  nes_namco_apu.cpp  (+21 more)
apps/source/dendy/core_quicknes/mappers/: mapper000.hpp  mapper001.hpp  mapper002.hpp  mapper003.hpp  mapper004.hpp  mapper005.hpp  mapper007.hpp  mapper009.hpp  mapper010.hpp  mapper011.hpp  mapper015.hpp  mapper019.hpp  mapper021.hpp  mapper022.hpp  mapper023.hpp  mapper024.hpp  mapper025.hpp  mapper026.hpp  mapper030.hpp  mapper032.hpp  mapper033.hpp  mapper034.hpp  mapper060.hpp  mapper066.hpp  mapper069.hpp  mapper070.hpp  mapper071.hpp  mapper073.hpp  mapper075.hpp  mapper078.hpp  mapper079.hpp  mapper085.hpp  mapper086.hpp  mapper087.hpp  mapper088.hpp  mapper089.hpp  mapper093.hpp  mapper094.hpp  mapper097.hpp  mapper113.hpp  (+15 more)
apps/source/dendy/emu2413/: emu2413.cpp  emu2413.h  emu2413_state.cpp  emu2413_state.h
apps/source/dendy/platform/pico/: board_config.h  rom_selector.c  settings.c  settings.h  uart_logging.c  uart_logging.h
apps/source/dendy/util/: bits_and_bytes.c  bits_and_bytes.h
apps/source/digger/: frankos_app.h  frankos_main.c  frankos_timer.c  ini.c  main.c  scores.c
apps/source/frankamp/: CMakeLists.txt  main.c
apps/source/kickstart/: CMakeLists.txt  main.c
apps/source/manul/: CMakeLists.txt  font.c  font.h  font_leggie_bold.h  font_leggie_heading.h  font_leggie_regular.h  main.c  render.c  render.h
apps/source/minesweeper/: main.c
apps/source/nettools/: main.c
apps/source/notepad/: CMakeLists.txt  main.c
apps/source/paintbrush/: main.c  pb.h
apps/source/pshell/: CMakeLists.txt  frankos_app.ld  main.c  pshell_compat.c  pshell_compat.h  pshell_libc.c  pshell_setjmp.S  pshell_vt100.c  pshell_vt100.h  shell.c
apps/source/pshell/c-examples/: snake.c
apps/source/pshell/cc/: cc.c  cc.h  cc_defs.h  cc_extrns.h  cc_malloc.c  cc_malloc.h
apps/source/pshell/misc/: readln.c  tar.c
apps/source/pshell/vi/: vi.c
apps/source/solitaire/: main.c
apps/source/videoplayer/: main.c
apps/source/zxspectrum/: CMakeLists.txt  main.c  zx.h  zxspectrum.inf
docs/: api-reference.md  app-development.md  architecture.md  building.md
drivers/psram/: psram.c
drivers/uart_pio/: uart_rx.pio  uart_tx.pio
lib/opl/: CMakeLists.txt  emu8950.c  genmidi_data.h  midi_opl.c  midi_opl.h  midifile.c  midifile.h
sdcard/fos/: basic  calculator  dendy  dendy.inf  digger  digger.inf  frankamp  frankamp.inf  kickstart  kickstart.inf  manul  minesweeper  nettools  notepad  notepad.inf  paintbrush  pshell  solitaire  video  zxspectrum  zxspectrum.inf
src/: FreeRTOSConfig.h  alttab.c  app.c  app.h  audio.c  audio.h  board_config.h  clock_app.c  clock_app.h  clock_icon.c  cmd.c  control_panel.c  controls.c  cursor.c  cursor.h  desktop.c  desktop.h  dialog.c  dialog.h  display.c  display.h  file_assoc.c  file_assoc.h  file_dialog.c  filemanager.c  filemanager.h  gfx.c  gfx.h  hooks.c  keyboard.c  keyboard.h  lang.c  lang.h  main.c  menu.c  menu.h  netcard.c  netcard.h  network_settings.c  rtc.c  (+28 more)
src/musl/: __malloc.c  fopen.c
src/posix.1/: fcntl.c
tools/: convert_ico_16.py
